--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
   {
-      "name": "Gaming Website Builder",
+      "name": "TheaRiT Game Website",
       "version": "0.1.0",
       "private": true,
       "dependencies": {
