--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "vite": "6.3.5"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "dev": "vite"
   }
 }
