--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "*",
     "cmdk": "^1.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.1.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -52,8 +57,13 @@
     "vite": "6.3.5"
   },
   "scripts": {
-
     "build": "vite build",
-    "dev": "vite"
-  }
+    "dev": "vite",
+    "start": "node server.js"
+  },
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
